--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Data Lovers</title>
+    <title>.:Pokemon:.</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header class="container-header">
+    <img src="./data/images/logoPokemon.png" alt="logo de pokemon" width="140">
+      <span>HOME</span>
+      <span>POKEDEX</span>
+      <span>TOP 10</span>
+    </header>
+
+    <main container>
+
+    </main>
+
+    <footer>
+
+    </footer>
+
     <div id="root"></div>
     <script src="main.js" type="module"></script>
   </body>
