--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     </main>
 
     <footer>
+      <p>Creado por Tania y Mafer. LIM015</p>
     </footer>
     <div id="root"></div>
     <script src="main.js" type="module"></script>
