--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,7 @@
   <body>
     <header class="container-header">
 
-    <img src="./data/images/logoPokemon.png" alt="logo de pokemon" width="140">
-      <img src="./data/images/logoPokemon.png" alt="logo de pokemon" width="140">
+      <img src="./data/imagen/logo.png" alt="logo de pokemon" width="140">
       <span>HOME</span>
       <span>POKEDEX</span>
       <span>TOP 10</span>
@@ -17,6 +16,27 @@
 
     <main class ="container">
 
+      <section class="home">
+        <img src="./data/imagen/pikachu.png" alt="imagen del pokemon pikachu" width="700">
+          <div class="welcome">
+            <p>Welcome to the community</p>
+          </div>
+      </section>
+
+      <section class="pokedex">
+        <div class="card" id="card1"></div>
+        <div class="card" id="card2"></div>
+        <div class="card" id="card3"></div>
+        <div class="card" id="card4"></div>
+        <div class="card" id="card5"></div>
+        <div class="card" id="card6"></div>
+        <div class="card" id="cad7"></div>
+        <div class="card" id="card8"></div>
+        <div class="card" id="card9"></div>
+        <div class="card" id="card10"></div>
+        <div class="card" id="card11"></div>
+        <div class="card" id="card12"></div>
+      </section>
 
     </main>
 
