fn anonima hi pÃokedex

--- a/src/index.html
+++ b/src/index.html
@@ -9,15 +9,17 @@
     <header class="container-header">
 
       <img src="./data/imagen/logo.png" alt="logo de pokemon" width="140">
-      <span>HOME</span>
-      <span>POKEDEX</span>
+      <input type="button" id="pokedex" value="Pokedex">
+      <label for="pokedex">
+
+
       <span>TOP 10</span>
     </header>
 
     <main class ="container">
 
-      <section class="home">
-        <img src="./data/imagen/pikachu.png" alt="imagen del pokemon pikachu" width="700">
+      <section class="home" id="home">
+        <img src="./data/imagen/pikachu.png" alt="imagen del pokemon pikachu" width="700"  id="img-pikachu">
           <div class="welcome">
             <p>Welcome to the community</p>
           </div>
