--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
       <img src="./data/imagen/logo.png" alt="logo de pokemon" width="140">
       <input type="button" id="pokedex" value="Pokedex">
-      <label for="pokedex">
+      <label for="pokedex"></label>
       <span>TOP 10</span>
 
       </header>
