--- a/src/index.html
+++ b/src/index.html
@@ -24,19 +24,7 @@
           </div>
       </section>
 
-      <section class="pokedex">
-        <div class="card" id="card1"></div>
-        <div class="card" id="card2"></div>
-        <div class="card" id="card3"></div>
-        <div class="card" id="card4"></div>
-        <div class="card" id="card5"></div>
-        <div class="card" id="card6"></div>
-        <div class="card" id="cad7"></div>
-        <div class="card" id="card8"></div>
-        <div class="card" id="card9"></div>
-        <div class="card" id="card10"></div>
-        <div class="card" id="card11"></div>
-        <div class="card" id="card12"></div>
+      <section class="pokedex" id="pokemones">
       </section>
 
     </main>
