--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="container-header">
+      <header class="container-header">
 
       <img src="./data/imagen/logo.png" alt="logo de pokemon" width="140">
+      <input type="button" id="btnHome" value="Home">
+      <label for="btnHome"></label>
       <input type="button" id="btnPokedex" value="Pokedex">
       <label for="btnPokedex"></label>
       <span>TOP 10</span>
