Update Pokemon Container

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       <label for="btnTop10"></label>
     </header>
 
-    <main class ="container-main">
+    <main class ="container-main" id="container-main">
       <img src="./data/imagen/pikachu.png" alt="pikachu img" width="500"  id="imgPikachu" class="imgPikachu" >
         <section class="container-home" id="home">
           <div class="container-welcome">
