Css frente de las carta avanzado

--- a/src/index.html
+++ b/src/index.html
@@ -18,22 +18,22 @@
     </header>
 
     <main class ="container-main" id="container-main">
-      <img src="./data/imagen/pikachu.png" alt="pikachu img" width="500"  id="imgPikachu" class="imgPikachu" >
         <section class="container-home" id="home">
+          <img src="./data/imagen/pikachu.png" alt="pikachu img" width="520" height="560" id="imgPikachu" class="imgPikachu" >
           <div class="container-welcome">
             <div class="welcome">
-              <p>Welcome to the community</p>
+              <p>¡Welcome to the community!</p>
             </div>
           </div>
         </section>
       
 
-      <section class="pokedex" id="pokedex" style="display:none">
-        <div class="modal">
-          <div class="modal-info">
+        <section class="pokedex" id="pokedex" style="display:none">
+          <div class="modal">
+            <div class="modal-info">
+            </div>
           </div>
-        </div>
-      </section>
+        </section>
 
     </main>
 
