Update css pokedex

--- a/src/index.html
+++ b/src/index.html
@@ -26,15 +26,34 @@
             </div>
           </div>
         </section>
-      
 
-        <section class="pokedex" id="pokedex" style="display:none">
-          <div class="modal">
-            <div class="modal-info">
+        <section class="container-pokedex" id="containerPokedex" style="display:none" >
+          <nav></nav>
+          <input list="typeRegion" name="typeRegion" id="listTypeRegion" placeholder="Region">
+          <datalist id="typeRegion">
+            <option value ="Kanto"></option>
+            <option value ="Johto"></option>
+          </datalist>
+          
+          <input list="typePokemon" name="typeRegion" id="listTypePokemon" placeholder="Type">
+          <datalist id="typePokemon">
+            <option value ="Poison"></option>
+            <option value ="Grass"></option>
+            <option value ="Fire"></option>
+            <option value ="Flying"></option>
+            <option value ="Water"></option>
+            <option value ="Bug"></option>
+            <option value ="Normal"></option>
+            <option value ="Electric"></option>
+            <option value ="Ground"></option>
+          </datalist>
+          <section class="card-pokedex" id="cardPokedex" >
+            <div class="modal">
+              <div class="modal-info">
+              </div>
             </div>
-          </div>
+          </section>
         </section>
-
     </main>
 
 
