--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
       <section class="filterPokemon">
           <input list="typeRegion" name="typeRegion" id="listTypeRegion" placeholder="Region">
             <datalist id="typeRegion">
-              <option value ="Kanto"></option>
+              <option value ="Kanto" ></option>
               <option value ="Johto"></option>
             </datalist>
         <input list="typePokemon" name="typeRegion" id="listTypePokemon" placeholder="Type">
@@ -50,12 +50,12 @@
           </datalist>
       </section>
 
-      <section class="cardsPokemon">
-        <section class="cardFrontPokemon" id="cardFrontPokemon" >
-        </section>
+      <section class="cardsPokemon" id="cardsPokemon">
+        <div class="cardFrontPokemon" id="cardFrontPokemon" >
+        </div>
 
-        <section class="cardBackPokemon" id="cardBackPokemon">
-        </section>
+        <div class="cardBackPokemon" id="cardBackPokemon">
+        </div>
       </section>
 
     </main>
