--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,22 @@
           <option value="johto">Johto</option>
           <option value="kanto">Kanto</option>
         </select>
+        <select id="seleccionarTipo">
+          <option value="grass">Grass</option>
+          <option value="poison">Poison</option>
+          <option value="water">Water</option>
+          <option value="flying">Flying</option>
+          <option value="bug">Bug</option>
+          <option value="normal">Normal</option>
+          <option value="electric">Electric</option>
+          <option value="ground">Ground</option>
+          <option value="psychic">Psychic</option>
+          <option value="fighting">Fighting</option>
+          <option value="rock">Rock</option>
+          <option value="ghost">Ghost</option>
+          <option value="ice">Ice</option>
+          <option value="dragon">Dragon</option>
+        </select>
         <br>
 
       </section>
