Fx FilterType End

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
           <option value="johto">Johto</option>
           <option value="kanto">Kanto</option>
         </select>
-        <select id="seleccionarTipo">
+        <select id="seleccionarTipo" name="Tipo">
           <option value="grass">Grass</option>
           <option value="poison">Poison</option>
           <option value="water">Water</option>
