--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,10 @@
           <option value="ice">Ice</option>
           <option value="dragon">Dragon</option>
         </select>
+        <select id="seleccionarOrden">
+        <option value="name">ordenar</option>
+        </select>
+
         <br>
 
       </section>
