Fx filterBySort ordena los nombres de la A-Z

--- a/src/index.html
+++ b/src/index.html
@@ -51,8 +51,10 @@
           <option value="ice">Ice</option>
           <option value="dragon">Dragon</option>
         </select>
+
         <select id="seleccionarOrden">
-        <option value="name">ordenar</option>
+        <option value="a-z">ordenar a-z</option>
+        <option value="z-a">ordenar z-a</option>
         </select>
 
         <br>
