filtros funcionan individualmente

--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,12 @@
         <input type="button" id="btnPokedex" value="POKEDEX" class="btnHeader">
         <label for="btnPokedex"></label>
         <input type="button" id="btnTop10" value="TOP10" class="btnHeader">
-        <label for="btnTop10"></label>
+        <label for="btnLegendary"></label>
         </div>
     </header>
 
     <main class ="container-main" id="container-main">
-      <section class="container-home" id="home">
+      <section class="container-home" id="containerHome">
           <img src="./data/imagen/pikachu.png" alt="pikachu img" width="520" height="560" id="imgPikachu" class="imgPikachu" >
           <div class="container-welcome">
             <div class="welcome">
@@ -76,6 +76,8 @@
 
     </main>
 
+    <main class="container-Top10" id= "containerTop10" style="display:none">
+    </main>
 
     <footer class="container-footer" id="container-footer" style="display:none">
       <p>Creado por Tania y Mafer. LIM015</p>
