--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
     </main>
 
     <main class="container-mainPokedex" id="containerMainPokedex" style="display:none">
-      <section class="filterPokemon">
+      <section class="filterPokemon" id="filterOptions" style="display:none">
         <select id="seleccionarRegion">
           <option disabled selected>Seleccionar Región</option>
           <option value="johto">Johto</option>
@@ -77,6 +77,8 @@
     </main>
 
     <main class="container-Top10" id= "containerTop10" style="display:none">
+      <div class="infoExtra" id="infoExtra" >
+      </div>
     </main>
 
     <footer class="container-footer" id="container-footer" style="display:none">
