Fx computeStats saca el porcentaje de los pokemones legendarios

--- a/src/index.html
+++ b/src/index.html
@@ -76,13 +76,15 @@
 
     </main>
 
-    <main class="container-Top10" id= "containerTop10" style="display:none">
-      <div class="infoExtra" id="infoExtra" >
-      </div>
+    <main class="container-mainPokedex" id= "containerTop10" style="display:none">
+      <section class="messageCalcular" id="infoExtra" >
+      </section>
+      <section class="cardFrontPokemon" id="pokemontTop10" >
+      </section>
     </main>
 
     <footer class="container-footer" id="container-footer" style="display:none">
-      <p>Creado por Tania y Mafer. LIM015</p>
+      <h2> ©Creado por Tania y Mafer. LIM015</h2>
     </footer>
 
     <div id="root"></div>
