--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <label for="btnHome"></label>
         <input type="button" id="btnPokedex" value="POKEDEX" class="btnHeader">
         <label for="btnPokedex"></label>
-        <input type="button" id="btnTop10" value="TOP10" class="btnHeader">
+        <input type="button" id="btnInfo" value="+INFO" class="btnHeader">
         <label for="btnLegendary"></label>
         </div>
     </header>
