--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
           <img src="./data/imagen/pikachu.png" alt="pikachu img" width="520" height="560" id="imgPikachu" class="imgPikachu" >
           <div class="container-welcome">
             <div class="welcome">
-              <p>Welcome to the community!</p>
+              <p class="textWelcome">Welcome to the community!</p>
             </div>
           </div>
       </section>
