--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,7 @@
         <select class="filterPokedex" id="seleccionarTipo" name="Tipo">
           <option disabled selected>Type</option>
           <option value="grass">Grass</option>
+          <option value="fire">Fire</option>
           <option value="poison">Poison</option>
           <option value="water">Water</option>
           <option value="flying">Flying</option>
