--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,12 @@
 
       </section>
 
+      <section class="modal-container" id="modal-container">
+        <div class="modal-pokemon" id="modal-pokemon">
+          <button class="close-modal" id="close-modal">X</button>
+        </div>
+      </section>
+
       <section class="cardsPokemon" id="cardsPokemon">
         <div class="cardFrontPokemon" id="cardFrontPokemon" >
         </div>
@@ -82,7 +88,7 @@
         <div class="cardBackPokemon" id="cardBackPokemon">
         </div>
       </section>
-
+     
     </main>
 
     <main class="container-mainPokedex" id= "containerTop10" style="display:none">
