--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
     <main class="container-mainPokedex" id= "containerTop10" style="display:none">
       <section class="messageCalcular" id="infoExtra" >
       </section>
-      <section class="cardFrontPokemon" id="pokemontTop10" >
+      <section class="cardPokemonInfo" id="pokemontTop10" >
       </section>
     </main>
 
