--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
       </section>
     </main>
 
-    <main class="container-mainPokedex" id="containerMainPokedex" style="display:none">
+    <main class="container-mainPokedex" id="containerMainPokedex">
       <section class="filterPokemon" id="filterOptions" >
         <select class="filterPokedex" id="seleccionarRegion">
           <option disabled selected>Region</option>
@@ -93,10 +93,8 @@
      
     </main>
 
-    <main class="container-mainPokedex" id= "containerTop10" style="display:none">
+    <main id= "containerTop10" style="display:none">
       <section class="messageCalcular" id="infoExtra" >
-      </section>
-      <section class="cardPokemonInfo" id="pokemontTop10" >
       </section>
     </main>
 
