--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
       </section>
     </main>
 <!--------------------------------Diseño del container pokedex con filtros--------------------------------->
-    <main class="container-mainPokedex" id="containerMainPokedex">
+    <main class="container-mainPokedex" id="containerMainPokedex" style="display:none">
       <section class="filterPokemon" id="filterOptions" >
         <select class="filterPokedex" id="seleccionarRegion">
           <option disabled selected>Region</option>
@@ -97,7 +97,7 @@
       </section>
     </main>
 <!---------------------------------Diseño del Footer--------------------------------->
-    <footer class="container-footer" id="container-footer" style="display:none">
+    <footer class="container-footer" id="container-footer">
       <p class="textFooter"> ©Created by Tania and Mafer - LIM015</p>
     </footer>
     <script src="main.js" type="module"></script>
